Update Markscheme 2 - Preview.html

--- a/Markscheme 2 - Preview.html
+++ b/Markscheme 2 - Preview.html
@@ -103,10 +103,10 @@
  <div id="od-site">
     <div id="od-commands">
       <div id="od-login" style="display: block;">
-        <a href="https://portal.uclan.ac.uk/bbcswebdav/pid-3283291-dt-content-rid-4125649_1/courses/CO2516_201819_1_9/Markscheme%202%20-%20Preview%285%29.html#" onclick="signInToOneDrive()">Sign in to OneDrive</a>&nbsp;&nbsp;
+        <a href="#" onclick="signInToOneDrive()">Sign in to OneDrive</a>&nbsp;&nbsp;
       </div>
       <div id="od-logoff" style="display: none;">
-        <a href="https://portal.uclan.ac.uk/bbcswebdav/pid-3283291-dt-content-rid-4125649_1/courses/CO2516_201819_1_9/Markscheme%202%20-%20Preview%285%29.html#" onclick="signOut()">Sign Out</a>
+        <a href="#" onclick="signOut()">Sign Out</a>
       </div>
     </div>
     <div id="od-title">CO2516 Assignment 2 - Grade estimator</div>
