Update Markscheme 1 - Test plan.html

--- a/Markscheme 1 - Test plan.html
+++ b/Markscheme 1 - Test plan.html
@@ -1,5 +1,6 @@
 <HTML>
 <head>
+  <title>CO3509 Assignment 1 - Grade estimator</title>
   <link rel="stylesheet" type="text/css" href="https://martinbateman.github.io/style.css"/>
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
   <script id="odauth" src="https://martinbateman.github.io/odauth.js"></script>
@@ -65,7 +66,7 @@
         return JSON.parse(value);
       }
 
-      return "";
+CO3509 Assignment 1 - Grade estimator      return "";
     }
     function signOut()
     {
