Update Markscheme 1 - Memcrashed.html

--- a/Markscheme 1 - Memcrashed.html
+++ b/Markscheme 1 - Memcrashed.html
@@ -65,8 +65,7 @@
         var value = cookies.substring(start, end);
         return JSON.parse(value);
       }
-
-CO4509 Assignment 1 - Grade estimator      return "";
+    return "";
     }
     function signOut()
     {
