--- a/labsheet.html
+++ b/labsheet.html
@@ -158,7 +158,7 @@ change the CD/DVD to Use ISO image file. Select the Windows Server 2016 ISO from
   <li>Insert the ISO into the virtual CDROM and power on the virtual machine.<li>
   <li>Click Install now</li>
   <li>Enter your product key, You can either use a product key from OnTheHub or you can use a KMS Key from Microsoft see <a href="https://technet.microsoft.com/en-us/library/jj612867.aspx">here</a>.</li>
-  <li>Select Windows Server 2016 (Desktop Experience)<li>
+  <li>Select Windows Server 2016 (Desktop Experience)</li>
   <li>Accept the License and click next</li>
   <li>Select Custom: Install Windows only (advance)</li>
   <li>Click Next</li>
