--- a/labsheet.html
+++ b/labsheet.html
@@ -155,7 +155,7 @@ change the CD/DVD to Use ISO image file. Select the Windows Server 2016 ISO from
   <li>Click 'Finish'.</li>
   <li>Click 'Power on this Virtual Machine'.</li>
 <h2>Installing Windows Server 2016</h2>
-  <li>Insert the ISO into the virtual CDROM and power on the virtual machine.<li>
+  <li>Insert the ISO into the virtual CDROM and power on the virtual machine.</li>
   <li>Click Install now</li>
   <li>Enter your product key, You can either use a product key from OnTheHub or you can use a KMS Key from Microsoft see <a href="https://technet.microsoft.com/en-us/library/jj612867.aspx">here</a>.</li>
   <li>Select Windows Server 2016 (Desktop Experience)</li>
