--- a/Markscheme 1 - Memcrashed.html
+++ b/Markscheme 1 - Memcrashed.html
@@ -8,94 +8,10 @@
   <link rel="icon" href="https://d.sfx-df.ms/images/favicon.ico" type="image/x-icon">
   <link rel="mask-icon" href="https://d.sfx-df.ms/images/mask_icon.svg" color="#094AB2">
 <script>
-    function signInToOneDrive()
-    {
-      var appInfo = {
-        "clientId": "da55778d-4c93-4a5d-9ac9-7e3d95c531ef",
-        "redirectUri": "https://martinbateman.github.io/callback.html",
-        "scopes": "files.readwrite.all",
-        "authServiceUri": "https://login.microsoftonline.com/common/oauth2/v2.0/authorize"
-      };
-      provideAppInfo(appInfo);
-
-      var baseUrl = getQueryVariable("baseUrl")
-      msGraphApiRoot = (baseUrl) ? baseUrl : "https://graph.microsoft.com/v1.0/me";
-
-      challengeForAuth();
-
-      saveToCookie( { "apiRoot": msGraphApiRoot, "signedin": true } );
-      return false;
-    }
-
-    function showCustomLoginButton(show)
-    {
-      var loginButton = document.getElementById("od-login");
-      loginButton.style.display = show ? "block" : "none";
-
-      var logoutButton = document.getElementById("od-logoff");
-      logoutButton.style.display = show ? "none" : "block";
-    }
-    function saveToCookie(obj)
-    {
-      var expiration = new Date();
-      expiration.setTime(expiration.getTime() + 3600 * 1000);
-      var data = JSON.stringify(obj);
-      var cookie = "odexplorer=" + data +"; path=/; expires=" + expiration.toUTCString();
-
-      if (document.location.protocol.toLowerCase() == "https") {
-        cookie = cookie + ";secure";
-      }
-      document.cookie = cookie;
-    }
-    function loadFromCookie()
-    {
-      var cookies = document.cookie;
-      var name = "odexplorer=";
-      var start = cookies.indexOf(name);
-      if (start >= 0) {
-        start += name.length;
-        var end = cookies.indexOf(';', start);
-        if (end < 0) {
-          end = cookies.length;
-        }
-        else {
-          postCookie = cookies.substring(end);
-        }
-
-        var value = cookies.substring(start, end);
-        return JSON.parse(value);
-      }
-    return "";
-    }
-    function signOut()
-    {
-      logoutOfAuth();
-      saveToCookie( { "apiRoot": msGraphApiRoot, "signedin": false } );
-      $('#od-breadcrumb').empty();
-      $('#od-items').empty();
-      $('#od-json').empty();
-      location.reload();
-      clearInterval ();
-    }
-    function getQueryVariable(variable)
-    {
-       var query = window.location.search.substring(1);
-       var vars = query.split("&");
-       for (var i=0;i<vars.length;i++) {
-               var pair = vars[i].split("=");
-               if(pair[0] == variable){return pair[1];}
-       }
-       return(false);
-     }
-
-  var globalToken = "";
   var moduleCode = "CO4509";
   var assignmentNumber = "1";
-  var saved = 1;
-  var itemID = "";
   var maxX = 0;
-  var maxX = 0;
-  var settingDir = "appData";
+  var maxY = 0;
   var fileName = "/" + settingDir + "/" + moduleCode + "-assignment-" + assignmentNumber + ".json"; 
   var pageTitle = "CO4509 Assignment 1 - Grade estimator";
   </script>
