--- a/labsheet.html
+++ b/labsheet.html
@@ -41,7 +41,7 @@ var options = {
 var nanobar = new Nanobar( options );
 
 // move bar
-nanobar.go( 30 ); // size bar 30%
+//nanobar.go( 30 ); // size bar 30%
 //nanobar.go( 76 ); // size bar 76%
 
 // size bar 100% and and finish
