--- a/labsheet.html
+++ b/labsheet.html
@@ -75,5 +75,15 @@ href="https://technet.microsoft.com/en-us/library/jj612867.aspx">here</a>.</li>
 <BR/>
   </div>
   <script type="text/javascript" src="labjs.js"></script>
+  <script>
+var options = {
+  classname: 'my-class',
+  id: 'my-id',
+  target: document.getElementById('myDivId')
+};
+
+var nanobar = new Nanobar( options );
+
+  </script>
 </BODY>
 </HTML>
