--- a/labsheet.html
+++ b/labsheet.html
@@ -43,6 +43,9 @@ in the lab as it is already installed.
 </p>
 <ol id="instructions">
   <li>Start VMware workstation and click 'Create a New Virtual Machine'. Select 'Typical (recommended)' and click next.</li>
+  <ul>
+    <li> <a href="https://web.microsoftstream.com/video/082d3a39-b7d0-44d0-9b8d-bb767fdbe631">link</a></li>
+  </ul>
   <li>Select 'I will install the operating system later.' and click Next.</li>
   <li>For the guest operating systems select Microsoft Windows and for the version select 'Windows Server 2016' and click next.</li>
   <li>For the machine name use 'Windows Server 2016', change the location to the e: drive. You should create a folder on the e: drive to store the virtual 
@@ -67,7 +70,7 @@ href="https://technet.microsoft.com/en-us/library/jj612867.aspx">here</a>.</li>
   <li>You should be asked if you want to find PCs, devices and content on this network. Select No.</li>
   <li>Wait until the Server Manager Dashboard has loaded then explore the Server Manager. Get familiar with the options (you don't have to understand what they do yet).</li>
 <h2>Advanced</h2>
-  <li>What is the difference between Server Core and Server with GUI? Give advantaged and disadvantages of each</li>
+  <li>What is the difference between Server Core and Server with GUI? Give advantages and disadvantages of each</li>
 </ol>
 <BR/>
   </div>
