--- a/labsheet.html
+++ b/labsheet.html
@@ -47,6 +47,7 @@ in the lab as it is already installed.
     <li> <a href="https://web.microsoftstream.com/video/082d3a39-b7d0-44d0-9b8d-bb767fdbe631">link</a></li>
   </ul>
   <li>Select 'I will install the operating system later.' and click Next.</li>
+<iframe width="640" height="360" src="https://web.microsoftstream.com/embed/video/082d3a39-b7d0-44d0-9b8d-bb767fdbe631?autoplay=false&amp;showinfo=true" style="border:none;" allowfullscreen ></iframe>
   <li>For the guest operating systems select Microsoft Windows and for the version select 'Windows Server 2016' and click next.</li>
   <li>For the machine name use 'Windows Server 2016', change the location to the e: drive. You should create a folder on the e: drive to store the virtual 
 machines. Use your username as the folder name.</li>
