--- a/labsheet.html
+++ b/labsheet.html
@@ -37,50 +37,141 @@ you can use a KMS key from <a href="https://technet.microsoft.com/en-gb/library/
 You can download the ISOs used in this module, as well as VMware Workstation from onethehub.com. Details are on Blackboard in the useful links section.
 
 If you have never used VMware before then I suggest you watch 
-<a href="https://www.lynda.com/Fusion-tutorials/Installing-VMware-Workstation/163066/175191-4.html?org=uclan.ac.uk">this</a>. You do not need to install VMware 
-Workstation 
+<a href="https://www.lynda.com/Fusion-tutorials/Installing-VMware-Workstation/163066/175191-4.html?org=uclan.ac.uk">this</a>. You do not need to install VMware Workstation 
 in the lab as it is already installed.
 
 </p>
 <ol id="instructions">
   <li>Start VMware workstation and click 'Create a New Virtual Machine'. Select 'Typical (recommended)' and click next.</li>
-<button class="collapsible">Open</button>
+<div class="collapsible">&nbsp;</div>
 <div class="content">
-this is a test
-this is the second line.
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+<iframe width="640" height="360" src="https://web.microsoftstream.com/embed/video/082d3a39-b7d0-44d0-9b8d-bb767fdbe631?autoplay=false&amp;showinfo=true" style="border:none;" allowfullscreen ></iframe>
 </div>
   <li>Select 'I will install the operating system later.' and click Next.</li>
-<button class="collapsible">Open</button>
+<div class="collapsible">&nbsp;</div>
 <div class="content">
-this is a test
-this is the second line.
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+<iframe width="560" height="315" src="https://www.youtube.com/embed/lJIrF4YjHfQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+  <li>For the guest operating systems select Microsoft Windows and for the version select 'Windows Server 2016' and click next.</li>
+<div class="collapsible">&nbsp;</div>
+<div class="content">
+Here there could be extra help. Links to FAQ for this stage or embedded video.
 </div>
 
-  <li>For the guest operating systems select Microsoft Windows and for the version select 'Windows Server 2016' and click next.</li>
   <li>For the machine name use 'Windows Server 2016', change the location to the e: drive. You should create a folder on the e: drive to store the virtual 
 machines. Use your username as the folder name.</li>
+<div class="collapsible">&nbsp;</div>
+<div class="content">
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+</div>
+
   <li>Leave the disk capacity as 60 GB and leave the disk as 'Split virtual disk into multiple files'. Click Next.</li>
+<div class="collapsible">&nbsp;</div>
+<div class="content">
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+</div>
+
   <li>Click 'customize Hardware'. Change the Memory to 4 GB and change the number of processors to 2. Change the Network Adapter to Host-only, finally 
 change the CD/DVD to Use ISO image file. Select the Windows Server 2016 ISO from the d: drive. Click 'Close'.</li>
+<div class="collapsible">&nbsp;</div>
+<div class="content">
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+</div>
+
   <li>Click 'Finish'.</li>
+<div class="collapsible">&nbsp;</div>
+<div class="content">
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+</div>
+
   <li>Click 'Power on this Virtual Machine'.</li>
+<div class="collapsible">&nbsp;</div>
+<div class="content">
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+</div>
+
 <h2>Installing Windows Server 2016</h2>
   <li>Insert the ISO into the virtual CDROM and power on the virtual machine.</li>
+<div class="collapsible">&nbsp;</div>
+<div class="content">
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+</div>
+
   <li>Click Install now</li>
+<div class="collapsible">&nbsp;</div>
+<div class="content">
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+</div>
+
   <li>Enter your product key, You can either use a product key from OnTheHub or you can use a KMS Key from Microsoft see <a 
 href="https://technet.microsoft.com/en-us/library/jj612867.aspx">here</a>.</li>
+<div class="collapsible">&nbsp;</div>
+<div class="content">
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+</div>
+
   <li>Select Windows Server 2016 (Desktop Experience)</li>
+<div class="collapsible">&nbsp;</div>
+<div class="content">
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+</div>
+
   <li>Accept the License and click next</li>
+<div class="collapsible">&nbsp;</div>
+<div class="content">
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+</div>
+
   <li>Select Custom: Install Windows only (advance)</li>
+<div class="collapsible">&nbsp;</div>
+<div class="content">
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+</div>
+
   <li>Click Next</li>
+<div class="collapsible">&nbsp;</div>
+<div class="content">
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+</div>
+
   <li>Wait while it install Windows. This could take a while.</li>
+<div class="collapsible">&nbsp;</div>
+<div class="content">
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+</div>
+
   <li>Enter a password to use for the Administrator account, Figure \ref{enterNewPassword}. I suggest using 'Pa55word' for now. For your assignments you should use a more secure password.</li>
+<div class="collapsible">&nbsp;</div>
+<div class="content">
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+</div>
+
   <li>Once your server has booted. Login using the password you have just set.</li>
+<div class="collapsible">&nbsp;</div>
+<div class="content">
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+</div>
+
   <li>You should be asked if you want to find PCs, devices and content on this network. Select No.</li>
+<div class="collapsible">&nbsp;</div>
+<div class="content">
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+</div>
+
   <li>Wait until the Server Manager Dashboard has loaded then explore the Server Manager. Get familiar with the options (you don't have to understand what they do yet).</li>
+<div class="collapsible">&nbsp;</div>
+<div class="content">
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+</div>
+
 <h2>Advanced</h2>
   <li>What is the difference between Server Core and Server with GUI? Give advantages and disadvantages of each</li>
-</ol>
+<div class="collapsible">&nbsp;</div>
+<div class="content">
+Here there could be extra help. Links to FAQ for this stage or embedded video.
+</div>
 <BR/>
   </div>
   <script type="text/javascript" src="labjs.js"></script>
