--- a/labsheet.html
+++ b/labsheet.html
@@ -92,7 +92,7 @@ Here there could be extra help. Links to FAQ for this stage or embedded video.
 Here there could be extra help. Links to FAQ for this stage or embedded video.
 </div>
 
-<h2>Installing Windows Server 2016</h2>
+<div class="subtitle">Installing Windows Server 2016</div>
   <li>Insert the ISO into the virtual CDROM and power on the virtual machine.</li>
 <div class="collapsible">&nbsp;</div>
 <div class="content">
