--- a/labsheet.html
+++ b/labsheet.html
@@ -166,7 +166,7 @@ Here there could be extra help. Links to FAQ for this stage or embedded video.
 Here there could be extra help. Links to FAQ for this stage or embedded video.
 </div>
 
-<h2>Advanced</h2>
+<div class="subtitle">Advanced</div>
   <li>What is the difference between Server Core and Server with GUI? Give advantages and disadvantages of each</li>
 <div class="collapsible">&nbsp;</div>
 <div class="content">
