--- a/labsheet.html
+++ b/labsheet.html
@@ -1,10 +1,10 @@
 <HTML>
 <head>
   <title>CO3509 Lab 1 - Example</title>
-  <link rel="stylesheet" type="text/css" href="https://martinbateman.github.io/labstyle.css"/>
+  <link rel="stylesheet" type="text/css" href="labstyle.css"/>
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-  <script type="text/javascript" src="https://martinbateman.github.io/nanobar.min.js"></script>
-  <script id="odauth" src="https://martinbateman.github.io/odauth.js"></script>
+  <script type="text/javascript" src="nanobar.min.js"></script>
+  <script id="odauth" src="odauth.js"></script>
   <link rel="icon" href="https://d.sfx-df.ms/images/favicon.ico" type="image/x-icon">
   <link rel="mask-icon" href="https://d.sfx-df.ms/images/mask_icon.svg" color="#094AB2">
 
@@ -39,7 +39,6 @@ You can download the ISOs used in this module, as well as VMware Workstation fro
 If you have never used VMware before then I suggest you watch 
 <a href="https://www.lynda.com/Fusion-tutorials/Installing-VMware-Workstation/163066/175191-4.html?org=uclan.ac.uk">this</a>. You do not need to install VMware Workstation 
 in the lab as it is already installed.
-
 </p>
 <ol id="instructions">
   <li>Start VMware workstation and click 'Create a New Virtual Machine'. Select 'Typical (recommended)' and click next.</li>
