--- a/labsheet.html
+++ b/labsheet.html
@@ -45,7 +45,12 @@ in the lab as it is already installed.
 <div class="collapsible">&nbsp;</div>
 <div class="content">
 Here there could be extra help. Links to FAQ for this stage or embedded video.
-<iframe width="640" height="360" src="https://web.microsoftstream.com/embed/video/082d3a39-b7d0-44d0-9b8d-bb767fdbe631?autoplay=false&amp;showinfo=true" style="border:none;" allowfullscreen ></iframe>
+<iframe width='560' height='315' 
+src='https://www.lynda.com/player/embed/175192?fs=3&w=560&h=315&ps=paused&utm_medium=referral&utm_source=embed+video&utm_campaign=ldc-website&utm_content=vid-175192' 
+mozallowfullscreen='true' webkitallowfullscreen='true' allowfullscreen='true' frameborder='0'></iframe><div style="margin-bottom:10px"><strong><a 
+href="https://www.lynda.com/Fusion-tutorials/Virtualization-Essential-Training/163066-2.html" title="Learn how to prepare your IT infrastructure for 
+virtualization, and create and manage virtual machines with Hyper-V and VMware Workstation.">Learning Virtualization</a></strong> by <a 
+href="https://www.lynda.com/author/1416850">Martin Guidry</a></div>
 </div>
   <li>Select 'I will install the operating system later.' and click Next.</li>
 <div class="collapsible">&nbsp;</div>
