--- a/teltTalk/Markscheme 2 - Integrated Network.html
+++ b/teltTalk/Markscheme 2 - Integrated Network.html
@@ -117,7 +117,7 @@ target.setAttribute ("name", worth);
 </script>
 
   
-  <td id="2-1" onclick="javascript:clicked(2, 1)" name="12.5">Web filtering enabled for all users. Content limited so that it is safe fro pupils of the primary school.</td>
+  <td id="2-1" onclick="javascript:clicked(2, 1)" name="12.5">Web filtering enabled for all users. Content limited so that it is safe for pupils of the primary school.</td>
 
 <script>
 // it was easier to set this in JavaScript rather than set it via the HTML generator
