--- a/teltTalk/Lab1.html
+++ b/teltTalk/Lab1.html
@@ -139,6 +139,7 @@ You might not catch this quickly enough on the first try. If it goes past this s
   </div>
   <script type="text/javascript" src="https://martinbateman.github.io/labjs.js"></script>
 
+<script>
 (function () {
     var div = document.createElement("div");
     document.getElementsByTagName('body')[0].appendChild(div);
@@ -152,7 +153,7 @@ You might not catch this quickly enough on the first try. If it goes past this s
         };
     });
 }());
-
+</script>
 </body>
 </html>
 
