--- a/teltTalk/Lab1.html
+++ b/teltTalk/Lab1.html
@@ -34,7 +34,7 @@
   <div id="od-loading"></div>
   <div id="od-content">
 <h1>Introduction</h1>
-This lab introduces the use of Windows Server. You are going to install your first copy of Windows Server 2019. You will need a Windows Server 2019 ISO and a product key. The ISO should be on the d: drive of the lab computer and you can use a KMS2 key from https://technet.microsoft.com/en-gb/library/jj612867.aspx You can download the ISOs used in this module, as well as VMware Workstation from onethehub.com. Details are on Blackboard in the useful links section.
+This lab introduces the use of Windows Server. You are going to install your first copy of Windows Server 2019. You will need a Windows Server 2019 ISO and a product key. The ISO should be on the d: drive of the lab computer and you can use a KMS key from https://technet.microsoft.com/en-gb/library/jj612867.aspx You can download the ISOs used in this module, as well as VMware Workstation from onethehub.com. Details are on Blackboard in the useful links section.
 If you have never used VMware before then I suggest you watch https://www.lynda.com/Fusion-tutorials/Installing-VMware-Workstation/163066/175191-4.html?org=uclan.ac.uk. You do not need to install VMware Workstation in the lab as it is already installed.
 <h1>Instructions</h1>
 <ol id="instructions">
