--- a/co2516/Lab 1 - Manually Installing Windows.html
+++ b/co2516/Lab 1 - Manually Installing Windows.html
@@ -34,7 +34,7 @@
   <div id="od-loading"></div>
   <div id="od-content">
 <h1>Introduction</h1>
-This lab introduces the use of Windows Server. You are going to install your first copy of Windows Server 20161 . You will need a Windows Server 2016 R2 ISO and a product key. The ISO should be on the d: drive of the lab computer and you can use a KMS2 key from https://technet.microsoft.com/en-gb/library/jj612867.aspx You can download the ISOs used in this module, as well as VMware Workstation from onethehub.com. Details are on Blackboard in the useful links section.
+This lab introduces the use of Windows Server. You are going to install your first copy of Windows Server 20161 . You will need a Windows Server 2016 R2 ISO and a product key. The ISO should be on the d: drive of the lab computer and you can use a KMS2 key from <a href ="https://docs.microsoft.com/en-us/windows-server/get-started/kmsclientkeys">Microsoft</a>.You can download the ISOs used in this module, as well as VMware Workstation from onethehub.com. Details are on Blackboard in the useful links section.
 If you have never used VMware before then I suggest you watch https://www.lynda.com/Fusion-tutorials/Installing-VMware-Workstation/163066/175191-4.html?org=uclan.ac.uk. You do not need to install VMware Workstation in the lab as it is already installed.
 <h1>Instructions</h1>
 <ol id="instructions">
@@ -138,6 +138,21 @@ You might not catch this quickly enough on the first try. If it goes past this s
 </ol>
   </div>
   <script type="text/javascript" src="https://martinbateman.github.io/labjs.js"></script>
+<script>
+(function () {
+    var div = document.createElement("div");
+    document.getElementsByTagName('body')[0].appendChild(div);
+    div.outerHTML = "<div id='botDiv' style='height: 38px; position: fixed; bottom: 0; right:0 ; z-index: 1000; background-color: #fff'><div id='botTitleBar' style='height: 38px; width: 400px; position:fixed; cursor: pointer;'></div><iframe width='400px' height='600px' src='https://webchat.botframework.com/embed/MartinBotman?s=6SHQGsBTkGA.P4pqpBpbHEdoqhXVVmOhG3NyamC7p0XmlyIo-QFDbLE'></iframe></div>"; 
+
+    document.querySelector('body').addEventListener('click', function (e) {
+        e.target.matches = e.target.matches || e.target.msMatchesSelector;
+        if (e.target.matches('#botTitleBar')) { 
+            var botDiv = document.querySelector('#botDiv'); 
+            botDiv.style.height = botDiv.style.height == '600px' ? '38px' : '600px';
+        };
+    });
+}());
+</script>
 </body>
 </html>
 
