--- a/co2516/Markscheme 1 - Documentation.html
+++ b/co2516/Markscheme 1 - Documentation.html
@@ -1,4 +1,4 @@
-<HTML>
+64<HTML>
 <head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
   <link rel="stylesheet" type="text/css" href="https://martinbateman.github.io/style.css">
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -61,6 +61,8 @@ This page does not save your settings
 var worth = ((20/100) * 20)/ 80 * 100;
 var target = document.getElementById ("0-0");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -72,6 +74,8 @@ target.setAttribute ("name", worth);
 var worth = ((20/100) * 40)/ 80 * 100;
 var target = document.getElementById ("1-0");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -83,6 +87,8 @@ target.setAttribute ("name", worth);
 var worth = ((20/100) * 50)/ 80 * 100;
 var target = document.getElementById ("2-0");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -94,6 +100,8 @@ target.setAttribute ("name", worth);
 var worth = ((20/100) * 60)/ 80 * 100;
 var target = document.getElementById ("3-0");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -105,6 +113,8 @@ target.setAttribute ("name", worth);
 var worth = ((20/100) * 70)/ 80 * 100;
 var target = document.getElementById ("4-0");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -116,6 +126,8 @@ target.setAttribute ("name", worth);
 var worth = ((20/100) * 80)/ 80 * 100;
 var target = document.getElementById ("5-0");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -131,6 +143,8 @@ target.setAttribute ("name", worth);
 var worth = ((40/100) * 20)/ 80 * 100;
 var target = document.getElementById ("0-1");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -142,6 +156,8 @@ target.setAttribute ("name", worth);
 var worth = ((40/100) * 40)/ 80 * 100;
 var target = document.getElementById ("1-1");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -153,6 +169,8 @@ target.setAttribute ("name", worth);
 var worth = ((40/100) * 50)/ 80 * 100;
 var target = document.getElementById ("2-1");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -164,6 +182,8 @@ target.setAttribute ("name", worth);
 var worth = ((40/100) * 60)/ 80 * 100;
 var target = document.getElementById ("3-1");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -175,6 +195,8 @@ target.setAttribute ("name", worth);
 var worth = ((40/100) * 70)/ 80 * 100;
 var target = document.getElementById ("4-1");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -186,6 +208,8 @@ target.setAttribute ("name", worth);
 var worth = ((40/100) * 80)/ 80 * 100;
 var target = document.getElementById ("5-1");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -203,6 +227,8 @@ Sources are described and commented on.</TD>
 var worth = ((30/100) * 20)/ 80 * 100;
 var target = document.getElementById ("0-2");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -216,6 +242,8 @@ Sources are described and commented on.</TD>
 var worth = ((30/100) * 40)/ 80 * 100;
 var target = document.getElementById ("1-2");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -229,6 +257,8 @@ Sources are described and commented on.</TD>
 var worth = ((30/100) * 50)/ 80 * 100;
 var target = document.getElementById ("2-2");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -242,6 +272,8 @@ Sources are described and commented on.</TD>
 var worth = ((30/100) * 60)/ 80 * 100;
 var target = document.getElementById ("3-2");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -255,6 +287,8 @@ Sources are described and commented on.</TD>
 var worth = ((30/100) * 70)/ 80 * 100;
 var target = document.getElementById ("4-2");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -268,6 +302,8 @@ Sources are described and commented on.</TD>
 var worth = ((30/100) * 80)/ 80 * 100;
 var target = document.getElementById ("5-2");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -283,6 +319,8 @@ target.setAttribute ("name", worth);
 var worth = ((10/100) * 20)/ 80 * 100;
 var target = document.getElementById ("0-3");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -294,6 +332,8 @@ target.setAttribute ("name", worth);
 var worth = ((10/100) * 40)/ 80 * 100;
 var target = document.getElementById ("1-3");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -305,6 +345,8 @@ target.setAttribute ("name", worth);
 var worth = ((10/100) * 50)/ 80 * 100;
 var target = document.getElementById ("2-3");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -316,6 +358,8 @@ target.setAttribute ("name", worth);
 var worth = ((10/100) * 60)/ 80 * 100;
 var target = document.getElementById ("3-3");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -327,6 +371,8 @@ target.setAttribute ("name", worth);
 var worth = ((10/100) * 70)/ 80 * 100;
 var target = document.getElementById ("4-3");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -338,6 +384,8 @@ target.setAttribute ("name", worth);
 var worth = ((10/100) * 80)/ 80 * 100;
 var target = document.getElementById ("5-3");
 target.setAttribute ("name", worth);
+maxX = ;
+maxY = ;
 </script>
 
   
@@ -432,8 +480,6 @@ document.getElementById("total").innerHTML = gradeMap (total);
           var contentURL = msGraphApiRoot + "/drive/items/" + itemID + "/content";
 
           var assignmentData = Array(maxX+1);
-          console.log (maxX);
-          console.log (maxY);
           for (var i = 0; i <= maxX; i ++){
             assignmentData[i] = Array(maxY+1);
             for (var j = 0; j <= maxY; j ++){
